in Trac 1.0 we also support Git as an optional component below tracopt.versioncontrol.git.*. As to not make any first class, second class distinction, we also decided to move the subversion support over there, in tracopt.versioncontrol.svn.*

--- a/templates/default/trac.ini.erb
+++ b/templates/default/trac.ini.erb
@@ -214,6 +214,7 @@ password_store = HtPasswdStore
 htpasswd_file = <%= node["trac"]["password_file"] %>
 
 [components]
+tracopt.versioncontrol.svn.* = enabled
 webadmin.* = enabled
 trac.web.auth.loginmodule = disabled
 acct_mgr.admin.* = enabled
