add component difinition

--- a/templates/default/trac.ini.erb
+++ b/templates/default/trac.ini.erb
@@ -219,6 +219,7 @@ tracopt.versioncontrol.svn.* = enabled
 webadmin.* = enabled
 trac.web.auth.loginmodule = disabled
 acct_mgr.admin.* = enabled
+acct_mgr.register.* = enabled
 acct_mgr.api.accountmanager = enabled
 acct_mgr.htfile.abstractpasswordfilestore = enabled
 acct_mgr.htfile.htpasswdstore = enabled
